--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "Default": "server=localhost\\SQLEXPRESS; database=vega; Trusted_Connection=True;"
   }
 }
